--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,23 @@ python:
 # Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
 matrix:
   include:
+    - python: 3.6
+      arch: arm64
+      dist: xenial
+      sudo: true
     - python: 3.7
       dist: xenial
       sudo: true
     - python: 3.7
       arch: arm64
-      dist: focal
+      dist: xenial
+      sudo: true
+    - python: 3.8
+      dist: xenial
+      sudo: true
+    - python: 3.8
+      arch: arm64
+      dist: xenial
       sudo: true
 
 install:
